@@ -1,4 +1,7 @@
 Murmel könnte (vector-add v elem) bekommen, mlib: (defun vector-push-extend (elem v) (vector-add v elem)) + defmacro
+-> und vielleicht den ersten parameter von svref/ sref/ bvref/ seqref von vorne an die letzte stelle schieben (und setf/ get-setf-expansion anpassen)
+   dann hätten alle sequence funktionen die sequence als ersten parameter
+   -> besser für ->
 
 fatal sollte LambdaJError werfen (statt RuntimeException), checken ob das dann hübscher ausgegeben wird
 
