@@ -30,8 +30,9 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    * list->string now has an optional parameter: (list->string lst [adjustablep])
  * added seqref, seqset
    seqref is similar to CL elt, seqset is similar to CL (setf elt)
- * added the global variables *1, *2, *3 to the environment inside the REPL
-   *1..*3 work similar to Common Lisp's *, **, ***
+ * added the global variables @-, @+, @++, @+++, @*, @**, @***, @/, @//, @///
+   to the environment inside the REPL.
+   If you remove the leading @ then these work similar to Common Lisp's Repl variables.
 
  * mlib: added bit
  * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
